<resources>
    <string name="app_name">PICADAY</string>
    <string name="mypage">MYPAGE</string>
    <string name="add">ADD</string>
    <string name="setting">SETTING</string>
    <string name="cancel">CANCELING</string>
    <string name="check">CHECK</string>
    <string name="today">TODAY</string>
    <string name="thisweek">THIS WEEK</string>
    <string name="thismonth">THIS MONTH</string>
    <string name="icanuse">I CAN USE</string>
    <string name="title_hint">일정 제목</string>
    <string name="memo_hint">메모</string>
    <string name="location_hint">어디에서</string>
    <string name="with_hint">누구랑</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
