<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity_Fragment.AddActivity_weekly">


    <RadioGroup
        android:id="@+id/chk_group_weekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checkedButton="@id/chk_time_weekly"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_title_weekly">

        <RadioButton
            android:id="@+id/chk_time_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/coral_red"
            android:fontFamily="@font/scdream4"
            android:text="시간" />

        <RadioButton
            android:id="@+id/chk_day_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/coral_red"
            android:fontFamily="@font/scdream4"
            android:text="하루종일" />

        <RadioButton
            android:id="@+id/chk_deadline_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/coral_red"
            android:fontFamily="@font/scdream4"
            android:text="데드라인" />
    </RadioGroup>

    <EditText
        android:id="@+id/schedule_title_weekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:fontFamily="@font/scdream4"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_cancel_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_transparent"
        android:contentDescription="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cancel" />

    <ImageButton
        android:id="@+id/btn_check_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_transparent"
        android:contentDescription="@string/check"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_week"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/check" />

    <FrameLayout
        android:id="@+id/timeselect_picker_weekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_group_weekly">

    </FrameLayout>
</android.support.constraint.ConstraintLayout>